--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 /*  your css code here. If applicable */
 #yellow{
 	background-color:yellow;
-	border-width:1px;
-	border-color:green;
+	border:1px solid green;
+	padding:10px;
+	
 }
 #red{
 	background-color:red;
-	border-width:1px;
-	border-color:black;
+	border:1px solid black;
+	padding:10px;
 }
 #green{
 	background-color:green;
-	border-width:1px;
-	border-color: yellow;
+	border:1px solid yellow;
+	padding:10px;
 }
